# waysome

./: .drone.yml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  waysome.json
cmake/Modules/: FindCheck.cmake  FindDRM.cmake  FindEGL.cmake  FindEV.cmake  FindGBM.cmake  FindGLES2.cmake  FindIcuI18N.cmake  FindIcuIO.cmake  FindIcuUC.cmake  FindLatex2man.cmake  FindLibevdev.cmake  FindLibudev.cmake  FindMakeInfo.cmake  FindUUID.cmake  FindWaylandCursor.cmake  FindWaylandEgl.cmake  FindWaylandScanner.cmake  FindWaylandServer.cmake  FindXKBCommon.cmake  FindYajl.cmake
doc/: CMakeLists.txt
doc/user/: .gitignore  CMakeLists.txt  manpage.tex  waysome.tex
doc/user/api/: json.md  json.tex
doc/user/src/: api.tex  authors.tex  description.tex  environment.tex  files.tex  options.tex  seealso.tex  synopsis.tex  title.tex
doc/user/src/api/: commands.tex  event.tex  json.tex  message.tex  protocol.tex  reply.tex  transaction.tex
doc/user/src/api/reply/: error.tex  value.tex
etc/: Doxyfile  DoxygenLayout.xml
src/: CMakeLists.txt  context.c  context.h  main.c
src/action/: CMakeLists.txt  action.md  commands.c  commands.h  context.c  manager.c  manager.h  processor.c  processor.h  processor_stack.c  processor_stack.h  stack.md
src/command/: .gitignore  CMakeLists.txt  arithmetical.c  arithmetical.commands  binary.c  binary.commands  command.c  command.h  command.md  control.c  control.commands  declarations.h.in  list.c.in  list.h  logical.c  logical.commands  object.c  object.commands  processor.c  processor.h  statement.c  statement.h  string.c  string.commands  util.h  value.c  value.commands
src/compositor/: CMakeLists.txt  background_surface.c  background_surface.h  buffer.c  buffer.h  compositor.md  cursor.c  cursor.h  frame_buffer.c  frame_buffer.h  framebuffer_device.c  framebuffer_device.h  internal_context.h  keyboard.c  keyboard.h  module.c  module.h  monitor.c  monitor.h  monitor_mode.c  monitor_mode.h  seat.h  surface.c  surface.h  texture.c  texture.h  wayland_buffer.c  wayland_buffer.h  wayland_compositor.c  wayland_compositor.h  wayland_pointer.c  wayland_shell.c  wayland_shell.h  wayland_shell_surface.c  wayland_shell_surface.h
src/compositor/buffer/: buffer.c  buffer.h  egl.c  egl.h  frame.c  frame.h  frame_buffer.c  frame_buffer.h  gbm.c  gbm.h  image.c  image.h  image_buffer.c  image_buffer.h  raw_buffer.c  raw_buffer.h
src/compositor/wayland/: abstract_shell_surface.c  abstract_shell_surface.h  buffer.c  buffer.h  client.c  client.h  compositor.c  compositor.h  keyboard.c  keyboard.h  pointer.c  pointer.h  region.c  region.h  seat.c  seat.h  shell.c  shell.h  shell_surface.c  shell_surface.h  surface.c  surface.h  wayland_buffer.c  wayland_compositor.c  wayland_pointer.c  wayland_pointer.h  wayland_shell.c  wayland_shell_surface.c  xdg_shell.c  xdg_shell.h  xdg_surface.c  xdg_surface.h
src/connection/: CMakeLists.txt  config_file.c  config_file.h  connbuf.c  connbuf.h  connection.md  connector.c  connector.h  manager.c  manager.h  processor.c  processor.h
src/connector/: connector.h
src/input/: CMakeLists.txt  hotkey_dag.c  hotkey_dag.h  hotkey_event.c  hotkey_event.h  hotkeys.c  hotkeys.h  hotkeys.md  input.md  input_device.c  input_device.h  module.c  module.h  utils.c  utils.h
src/logger/: CMakeLists.txt  logger.md  module.c  module.h
src/objects/: CMakeLists.txt  array.c  array.h  message.c  message.h  named.c  named.h  object.c  object.h  objects.md  queue.c  queue.h  set.c  set.h  stack.c  stack.h  string.c  string.h  wayland_obj.c  wayland_obj.h
src/objects/message/: error_reply.c  error_reply.h  event.c  event.h  message.c  message.h  reply.c  reply.h  transaction.c  transaction.h  value_reply.c  value_reply.h
src/protocol/: .gitignore  CMakeLists.txt  protocol.md  xdg-shell-protocol.xml
src/serialize/: CMakeLists.txt  deserializer.c  deserializer.h  module.c  module.h  serialize.md  serializer.c  serializer.h
src/serialize/json/: common.c  common.h  deserializer.c  deserializer.h  deserializer_callbacks.c  deserializer_callbacks.h  deserializer_state.c  deserializer_state.h  keys.h  serializer.c  serializer.h  serializer_state.c  serializer_state.h  statemachine.md  states.h  string_jump_state.c  string_jump_state.h
src/session/: manager.c  manager.h  session.md
src/storage/: module.c  module.h  storage.md
src/util/: CMakeLists.txt  arithmetical.h  attributes.h  cleaner.c  cleaner.h  condition.h  config_file.c  config_file.h  debug.h  egl.c  egl.h  error.c  error.h  exec.c  exec.h  logical.h  socket.c  socket.h  string.h  util.md  wayland.c  wayland.h
src/values/: CMakeLists.txt  bool.c  bool.h  int.c  int.h  nil.c  nil.h  object_id.c  object_id.h  set.c  set.h  string.c  string.h  union.c  union.h  utils.c  utils.h  value.c  value.h  value_named.c  value_named.h  value_type.c  value_type.h  values.md
tests/: CMakeLists.txt
tests/check/: CMakeLists.txt  tests.h
tests/check/action/: action_tests.c
tests/check/command/: command_tests.c
tests/check/compositor/: compositor_tests.c
tests/check/connection/: connection_tests.c
tests/check/input/: CMakeLists.txt  input_tests.c
tests/check/logger/: logger_tests.c
tests/check/objects/: CMakeLists.txt  objects_tests.c
tests/check/objects/ws_object/: CMakeLists.txt  attribute_test.c  test.c
tests/check/objects/ws_queue/: test.c
tests/check/objects/ws_set/: CMakeLists.txt  test.c
tests/check/objects/ws_string/: CMakeLists.txt  test.c
tests/check/serialize/: CMakeLists.txt  serialize_tests.c
tests/check/serialize/json_deserializer/: CMakeLists.txt  test.c
tests/check/serialize/json_serializer/: test.c
tests/check/session/: session_tests.c
tests/check/storage/: storage_tests.c
tests/check/util/: util_tests.c
tests/check/values/: values_tests.c
