find_package(Threads REQUIRED)

set(TEST_SOURCES
    $<TARGET_OBJECTS:action>
    $<TARGET_OBJECTS:command>
    $<TARGET_OBJECTS:compositor>
    $<TARGET_OBJECTS:connection>
    $<TARGET_OBJECTS:input>
    $<TARGET_OBJECTS:logger>
    $<TARGET_OBJECTS:objects>
    $<TARGET_OBJECTS:serialize>
    $<TARGET_OBJECTS:util>
    $<TARGET_OBJECTS:values>
    PARENT_SCOPE)

set(TEST_LIBRARIES
    ${DRM_LIBRARIES}
    ${EGL_LIBRARIES}
    ${EVDEV_LIBRARIES}
    ${EV_LIBRARIES}
    ${ICU_OP_LIBRARIES}
    ${ICU_UC_LIBRARIES}
    ${PNG_LIBRARIES}
    ${UDEV_LIBRARIES}
    ${UUID_LIBRARIES}
    ${WAYLAND_CURSOR_LIBRARIES}
    ${WAYLAND_SERVER_LIBRARIES}
    ${XKB_COMMON_LIBRARIES}
    ${YAJL_LIBRARIES}
    ${libreset_LIBRARIES}
    PARENT_SCOPE)

set(TEST_INCLUDE_DIRS
    ${DRM_INCLUDE_DIRS}
    ${EGL_INCLUDE_DIRS}
    ${EVDEV_INCLUDE_DIRS}
    ${EV_INCLUDE_DIRS}
    ${ICU_OP_INCLUDE_DIRS}
    ${ICU_UC_INCLUDE_DIRS}
    ${libreset_INCLUDE_DIRS}
    ${PNG_INCLUDE_DIRS}
    ${UDEV_INCLUDE_DIRS}
    ${WAYLAND_CURSOR_INCLUDE_DIRS}
    ${WAYLAND_SERVER_INCLUDE_DIRS}
    ${XKB_COMMON_INCLUDE_DIRS}
    ${YAJL_INCLUDE_DIRS}
    ${UUID_INCLUDE_DIRS}
    PARENT_SCOPE)

set(TEST_DEFINITIONS
    ${DRM_DEFINITIONS}
    ${EGL_DEFINITIONS}
    ${EVDEV_DEFINITIONS}
    ${EV_DEFINITIONS}
    ${ICU_OP_DEFINITIONS}
    ${ICU_UC_DEFINITIONS}
    ${libreset_DEFINITIONS}
    ${PNG_DEFINITIONS}
    ${UDEV_DEFINITIONS}
    ${WAYLAND_CURSOR_DEFINITIONS}
    ${WAYLAND_SERVER_DEFINITIONS}
    ${XKB_COMMON_DEFINITIONS}
    ${YAJL_DEFINITIONS}
    ${UUID_DEFINITIONS}
    PARENT_SCOPE)

