find_package(EV REQUIRED)
find_package(IcuIO REQUIRED)
find_package(IcuUC REQUIRED)
find_package(UUID REQUIRED)
find_package(WaylandCursor REQUIRED)
find_package(WaylandEgl REQUIRED)
find_package(WaylandScanner REQUIRED)
find_package(WaylandServer REQUIRED)
find_package(Yajl REQUIRED)
find_package(libreset REQUIRED)

set(TEST_SOURCES
    $<TARGET_OBJECTS:action>
    $<TARGET_OBJECTS:command>
    $<TARGET_OBJECTS:connection>
    $<TARGET_OBJECTS:logger>
    $<TARGET_OBJECTS:objects>
    $<TARGET_OBJECTS:serialize>
    $<TARGET_OBJECTS:util>
    $<TARGET_OBJECTS:values>
    PARENT_SCOPE)

set(TEST_LIBRARIES
    ${EV_LIBRARIES}
    ${ICU_OP_LIBRARIES}
    ${ICU_UC_LIBRARIES}
    ${UUID_LIBRARIES}
    ${WAYLAND_CURSOR_LIBRARIES}
    ${WAYLAND_SERVER_LIBRARIES}
    ${YAJL_LIBRARIES}
    ${libreset_LIBRARIES}
    PARENT_SCOPE)

set(TEST_INCLUDE_DIRS
    ${EV_INCLUDE_DIRS}
    ${ICU_OP_INCLUDE_DIRS}
    ${ICU_UC_INCLUDE_DIRS}
    ${UUID_INCLUDE_DIRS}
    ${WAYLAND_CURSOR_INCLUDE_DIRS}
    ${WAYLAND_SERVER_INCLUDE_DIRS}
    ${YAJL_INCLUDE_DIRS}
    ${libreset_INCLUDE_DIRS}
    PARENT_SCOPE)

set(TEST_DEFINITIONS
    ${EV_DEFINITIONS}
    ${ICU_OP_DEFINITIONS}
    ${ICU_UC_DEFINITIONS}
    ${UUID_DEFINITIONS}
    ${WAYLAND_CURSOR_DEFINITIONS}
    ${WAYLAND_SERVER_DEFINITIONS}
    ${YAJL_DEFINITIONS}
    ${libreset_DEFINITIONS}
    PARENT_SCOPE)

